--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -348,9 +348,9 @@ label {
   width: 100vw;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: max-content 1fr;
-      grid-template-columns: -webkit-max-content 1fr;
-      grid-template-columns: max-content 1fr;
+  -ms-grid-columns: max-content minmax(100px, 1fr) minmax(auto, max-content);
+      grid-template-columns: -webkit-max-content minmax(100px, 1fr) minmax(auto, -webkit-max-content);
+      grid-template-columns: max-content minmax(100px, 1fr) minmax(auto, max-content);
   border: 4vw solid blue;
   border-left: 0;
 }
@@ -362,11 +362,67 @@ label {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   overflow-y: auto;
-  border: 2px solid lime;
+  -ms-grid-columns: (minmax(0, 300px))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(0, 300px));
+  overflow-x: hidden;
+}
+
+.enlargeContainer {
+  -webkit-transition: 0.2s all;
+  transition: 0.2s all;
+  justify-self: end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+}
+
+.ImagesPreview--imageContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
+  z-index: 2;
+  max-width: 100%;
+}
+
+.imageSelect-Enlarge {
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
+  z-index: -1;
+  max-width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .imageSelect-FilePreview {
-  height: 30vh;
+  max-height: 25vh;
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
+  z-index: -1;
+  max-width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.zero-width {
+  height: 0;
 }
 
 .TagsMenu-Accordion-label {
@@ -418,5 +474,13 @@ label {
           animation-fill-mode: forwards;
   -webkit-animation-direction: forwards;
           animation-direction: forwards;
+}
+
+.tagsMenu-Button_category {
+  padding: 0 !important;
+  margin: 0 !important;
+  text-transform: uppercase !important;
+  font-weight: 600 !important;
+  color: black !important;
 }
 /*# sourceMappingURL=main.css.map */
