--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -238,7 +238,7 @@ label{
     height: 100vh;
     width: 100vw;
     display: grid;
-    grid-template-columns: max-content 1fr;
+    grid-template-columns: max-content minmax(100px, 1fr) minmax(auto, max-content);
     border: 4vw solid blue;
     border-left: 0;
 }
@@ -246,10 +246,41 @@ label{
     display: flex;
     flex-wrap: wrap;
     overflow-y: auto;
-    border: 2px solid lime;
+    grid-template-columns: repeat( auto-fit, minmax(0, 300px) );
+    overflow-x: hidden;
+}
+.enlargeContainer{
+    transition: 0.2s all;
+    justify-self: end;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    transform: translateX(100%);
+}
+.ImagesPreview--imageContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: 0.4s all;
+    z-index: 2;
+    max-width: 100%;
+}
+.imageSelect-Enlarge{
+    transition: 0.4s all;
+    z-index: -1;
+    max-width: 100%;
+    object-fit: contain;
 }
 .imageSelect-FilePreview{
-    height: 30vh;
+    max-height: 25vh;
+    transition: 0.4s all;
+    z-index: -1;
+    max-width: 100%;
+    object-fit: contain;
+}
+.zero-width{
+    height: 0;
 }
 .TagsMenu-Accordion-label{
     display: flex !important;
@@ -273,4 +304,11 @@ label{
     animation-duration: 0.6s;
     animation-fill-mode: forwards;
     animation-direction: forwards;
+}
+.tagsMenu-Button_category{
+    padding: 0 !important;
+    margin: 0 !important;
+    text-transform: uppercase !important;
+    font-weight: 600 !important;
+    color: black !important;
 }
