--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -817,26 +817,41 @@ label {
 
 .ArtworkInfo-preview-container {
   max-height: 100%;
-  border: 1px solid;
   height: 100%;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 50px;
-          flex: 0 0 50px;
   z-index: 11;
   cursor: pointer;
-}
-
-.ArtworkInfo-preview {
-  border: 1px solid;
-  height: 100%;
-}
-
-.ArtworkInfo-seeAlso-container {
-  height: 150px;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.ArtworkInfo-preview {
   width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  opacity: 0.4;
+  -webkit-transition: 0.4s all;
+  transition: 0.4s all;
+}
+
+.ArtworkInfo-preview:hover {
+  opacity: 1;
+}
+
+.ArtworkInfo-seeAlso-container {
+  height: 75px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  overflow-y: scroll;
 }
 
 .info-up {
