--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -564,20 +564,29 @@ $background-color: white;
 }
 .ArtworkInfo-preview-container{
     max-height: 100%;
-    border: 1px solid;
     height: 100%;
-    flex: 0 0 50px;
     z-index: 11;
     cursor: pointer;
+    align-content: center;
+    align-items: center;
+    display: flex;
 }
 .ArtworkInfo-preview{
-    border: 1px solid;
+    // border: 1px solid;
+    width: 100%;
     height: 100%;
+    object-fit: cover;
+    opacity: 0.4;
+    transition: 0.4s all;
+}
+.ArtworkInfo-preview:hover{
+    opacity: 1;
 }
 .ArtworkInfo-seeAlso-container{
-    height: 150px;
+    height: 75px;
     display: flex;
-    width: 100%;
+    flex-wrap: wrap;
+    overflow-y: scroll;
 }
 
 .info-up{
