--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -780,9 +780,7 @@ label {
   top: 0;
   text-indent: -100%;
   overflow: hidden;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 19%;
-          flex: 1 1 19%;
+  height: 200px;
   min-width: 59px;
 }
 
@@ -838,7 +836,7 @@ label {
   -webkit-transform: translateY(0);
           transform: translateY(0);
   cursor: pointer;
-  width: 100%;
+  height: 100%;
 }
 
 .zero-width {
