--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -303,7 +303,8 @@ font-family: 'Times New Roman', Times, serif;
     top: 0;
     text-indent: -100%;
     overflow: hidden;
-    flex: 1 1 19%;
+    // flex: 1 1 19%;
+    height: 200px;
     min-width: 59px;
 }
 .FilePreview--imageContainer__empty{
@@ -352,7 +353,7 @@ font-family: 'Times New Roman', Times, serif;
     transform-origin: bottom;
     transform: translateY(0);
     cursor: pointer;
-    width: 100%;
+    height: 100%;
 }
 .zero-width{
     height: 0;
